# joy-proxy-win

./: .gitignore  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  build.ps1  deploy.bat
.github/workflows/: build.yml
docs/: DETAILED_DESIGN.md
src/common/include/joyproxy/: config.h  security.h
src/common/schemas/: session_config.schema.json
src/common/src/: config_shared.cpp  security.cpp
src/hook/include/: proxy_connector.h
src/hook/src/: hook_main.cpp  proxy_connector.cpp
src/native/: CMakeLists.txt
src/relay/: Cargo.toml
src/relay/src/: config.rs  error.rs  http_connect.rs  lib.rs  relay.rs  socks5.rs
src/relay/tests/: relay_test.rs
src/service/include/: config_mapping.h  injector.h  json_util.h  pipe_server.h
src/service/src/: config_mapping.cpp  injector.cpp  json_util.cpp  main.cpp  pipe_server.cpp
src/ui/JoyProxy/: App.xaml  App.xaml.cs  JoyProxy.csproj  MainWindow.xaml  MainWindow.xaml.cs  ProcessPickerWindow.xaml  ProcessPickerWindow.xaml.cs  app.manifest
src/ui/JoyProxy/Models/: AppModels.cs
src/ui/JoyProxy/Services/: AppServices.cs  ServiceClient.cs
